<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".LoginForm">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="LOGIN"
                    android:textColor="#ffffff"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:contentDescription="TODO" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/white_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="Username"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:paddingLeft="10dp"
                        android:autofillHints=""
                        tools:ignore="RtlSymmetry"
                        android:drawableLeft="@drawable/ic_baseline_person_24" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:paddingLeft="10dp"
                        android:autofillHints=""
                        tools:ignore="RtlSymmetry,TextFields" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/btn_dark"
                        android:text="Login"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtSignup"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:text="Don't Have An Account? SIGNUP"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/view"
                            android:layout_width="wrap_content"
                            android:layout_height="1dp"
                            android:layout_margin="24dp"
                            android:layout_weight="1"
                            android:background="#707070" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="OR"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />

                        <View
                            android:id="@+id/view1"
                            android:layout_width="wrap_content"
                            android:layout_height="1dp"
                            android:layout_margin="24dp"
                            android:layout_weight="1"
                            android:background="#707070" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="25dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:src="@drawable/fb"
                            android:contentDescription="TODO" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="25dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:src="@drawable/google"
                            android:contentDescription="TODO" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="25dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:src="@drawable/twitter"
                            android:contentDescription="TODO" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>