<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
      android:id="@+id/frames"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

   <androidx.viewpager.widget.ViewPager
       android:id="@+id/view_pager"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       />


   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#2E3540"
       android:id="@+id/btmNAV"
       app:layout_constraintBottom_toBottomOf="parent"
       app:menu="@menu/menu"
       app:itemTextColor="@color/white"
       app:itemIconTint="@color/white"
       />
</androidx.constraintlayout.widget.ConstraintLayout>