<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/signup"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        tools:context=".PostJob">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28dp"
            android:layout_marginVertical="5dp"
            android:textStyle="bold"
            android:backgroundTint="@color/black"
            android:text="Post Your Vacancy"/>


        <EditText
            android:id="@+id/titleJ"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:hint="Enter jobtitle"
            android:background="@drawable/bg_edittext"
            />

        <EditText
            android:id="@+id/descJ"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:background="@drawable/bg_edittext"
            android:hint="Enter description"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"            />
        <EditText
            android:id="@+id/skillsJ"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:background="@drawable/bg_edittext"
            android:hint="Enter skillsneeded"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"            />
        <EditText
            android:id="@+id/budgetJ"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:background="@drawable/bg_edittext"
            android:hint="Budget and Time "
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"            />
        <Button
            android:id="@+id/postbtnJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="POST"
            android:textSize="20sp"
            android:layout_marginHorizontal="45dp"
            android:textStyle="bold"
            android:backgroundTint="#1976D2"/>

    </LinearLayout>


</ScrollView>