<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".LoginActivity"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Sign Up"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/imggg"
                    android:layout_width="300sp"
                    android:layout_height="180sp"
                    android:src="@drawable/logo2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/white_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imggg">

                    <EditText
                        android:id="@+id/etFullname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="UserName"
                        android:inputType="textPersonName"
                        android:paddingStart="10dp"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@drawable/ic_baseline_person_24" />

                    <EditText
                        android:id="@+id/etUsernameS"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="Your Name"
                        android:inputType="textPersonName"
                        android:paddingStart="10dp"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/etPasswordS"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:id="@+id/etCpassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="RePassword"
                        android:inputType="textPersonName"
                        android:paddingStart="10dp"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:paddingLeft="10dp" />

                    <Button
                        android:id="@+id/btnSignup"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:background="@drawable/btn_dark"
                        android:text="SignUp"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtlogg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="Already Have an Account? Login"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>