...

            <TextView
                android:id="@+id/textViewE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Applicant"
                android:textStyle="bold"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                android:gravity="end" />
        </LinearLayout>

...
