<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Work">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="Applications"
        android:gravity="center"
        android:id="@+id/AppHeading"
        android:textSize="30sp"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginVertical="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/apprecycler"
        />

</FrameLayout>