...

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:visibility="invisible"
            android:id="@+id/cancelbtn"
            android:backgroundTint="@color/teal_200"
            tools:targetApi="lollipop" />
    </LinearLayout>


</LinearLayout>
